--- a/index.html
+++ b/index.html
@@ -24,16 +24,26 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./styles/emergency.css" />
+
+    <!-- Font awesome CDN -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+      integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
-  <body>
+  <body class="bg-green-50">
     <!-- Navbar  Section-->
     <nav
-      class="w-full flex flex-col md:flex-row items-center justify-between px-4 py-4"
+      class="w-full flex flex-col md:flex-row items-center justify-between px-4 py-4 bg-white"
     >
       <!-- left div -->
       <div class="left-div flex items-center gap-3">
         <img class="w-10 h-10" src="./assets/logo.png" alt="" />
-        <span class="font-extrabold text-green-900 leading-tight drop-shadow-md"
+        <span
+          class="font-extrabold text-green-900 leading-tight text-shadow-lg/20"
           >Emergency<br />Service</span
         >
       </div>
@@ -76,6 +86,300 @@
           Government of the People’s Republic of Bangladesh
         </p>
       </div>
+    </div>
+
+    <!-- main section -->
+
+    <div
+      class="main-div max-w-full md:max-w-[1450px] m-5 md:mx-auto mt-5 flex flex-col md:flex-row p-5 gap-5"
+    >
+      <!-- card section -->
+      <div class="card-div grid grid-cols-3 gap-6 w-full md:w-2/3">
+        <!-- emergency -->
+        <div class="card-container w-full p-5 rounded-xl bg-white shadow-xl">
+          <div class="flex items-center justify-between">
+            <div
+              class="w-20 h-20 bg-red-200 flex items-center justify-center rounded-xl"
+            >
+              <img src="./assets/emergency.png" alt="" />
+            </div>
+            <i class="fa-regular fa-heart"></i>
+          </div>
+
+          <div class="mt-8">
+            <h2 class="hind-madurai-bold text-2xl">জাতীয় জরুরি সেবা</h2>
+            <p class="text-gray-400 hind-madurai-regular text-lg">
+              National emergency
+            </p>
+            <h2 class="mt-4 text-3xl hind-madurai-bold">999</h2>
+          </div>
+
+          <div class="w-25 text-center p-2 mt-4 rounded-2xl bg-gray-200">
+            <p>সার্বজনীন</p>
+          </div>
+
+          <div class="flex gap-4 mt-3">
+            <button class="border border-gray-400 p-2 rounded-xl w-full">
+              <span><i class="fa-regular fa-copy mr-3"></i></span>Copy
+            </button>
+            <button class="bg-[#00A63E] p-2 rounded-xl w-full text-white">
+              <span> <i class="fa-solid fa-phone mr-3"></i></span>Call
+            </button>
+          </div>
+        </div>
+        <!-- police -->
+        <div class="card-container w-full p-5 rounded-xl bg-white shadow-xl">
+          <div class="flex items-center justify-between">
+            <div
+              class="w-20 h-20 bg-red-200 flex items-center justify-center rounded-xl"
+            >
+              <img src="./assets/police.png" alt="" />
+            </div>
+            <i class="fa-regular fa-heart"></i>
+          </div>
+
+          <div class="mt-8">
+            <h2 class="hind-madurai-bold text-2xl">পুলিশ</h2>
+            <p class="text-gray-400 hind-madurai-regular text-lg">Police</p>
+            <h2 class="mt-4 text-3xl hind-madurai-bold">999</h2>
+          </div>
+
+          <div class="w-25 text-center p-2 mt-4 rounded-2xl bg-gray-200">
+            <p>পুলিশ</p>
+          </div>
+
+          <div class="flex gap-4 mt-3">
+            <button class="border border-gray-400 p-2 rounded-xl w-full">
+              <span><i class="fa-regular fa-copy mr-3"></i></span>Copy
+            </button>
+            <button class="bg-[#00A63E] p-2 rounded-xl w-full text-white">
+              <span> <i class="fa-solid fa-phone mr-3"></i></span>Call
+            </button>
+          </div>
+        </div>
+        <!-- Fire service -->
+        <div class="card-container w-full p-5 rounded-xl bg-white shadow-xl">
+          <div class="flex items-center justify-between">
+            <div
+              class="w-20 h-20 bg-red-200 flex items-center justify-center rounded-xl"
+            >
+              <img src="./assets/fire-service.png" alt="" />
+            </div>
+            <i class="fa-regular fa-heart"></i>
+          </div>
+
+          <div class="mt-8">
+            <h2 class="hind-madurai-bold text-2xl">ফায়ার সার্ভিস</h2>
+            <p class="text-gray-400 hind-madurai-regular text-lg">
+              Fire Service
+            </p>
+            <h2 class="mt-4 text-3xl hind-madurai-bold">999</h2>
+          </div>
+
+          <div class="w-25 text-center p-2 mt-4 rounded-2xl bg-gray-200">
+            <p>ফায়ার</p>
+          </div>
+
+          <div class="flex gap-4 mt-3">
+            <button class="border border-gray-400 p-2 rounded-xl w-full">
+              <span><i class="fa-regular fa-copy mr-3"></i></span>Copy
+            </button>
+            <button class="bg-[#00A63E] p-2 rounded-xl w-full text-white">
+              <span> <i class="fa-solid fa-phone mr-3"></i></span>Call
+            </button>
+          </div>
+        </div>
+        <div class="card-container w-full p-5 rounded-xl bg-white shadow-xl">
+          <div class="flex items-center justify-between">
+            <div
+              class="w-20 h-20 bg-red-200 flex items-center justify-center rounded-xl"
+            >
+              <img src="./assets/emergency.png" alt="" />
+            </div>
+            <i class="fa-regular fa-heart"></i>
+          </div>
+
+          <div class="mt-8">
+            <h2 class="hind-madurai-bold text-2xl">জাতীয় জরুরি সেবা</h2>
+            <p class="text-gray-400 hind-madurai-regular text-lg">
+              National emergency
+            </p>
+            <h2 class="mt-4 text-3xl hind-madurai-bold">999</h2>
+          </div>
+
+          <div class="w-25 text-center p-2 mt-4 rounded-2xl bg-gray-200">
+            <p>সার্বজনীন</p>
+          </div>
+
+          <div class="flex gap-4 mt-3">
+            <button class="border border-gray-400 p-2 rounded-xl w-full">
+              <span><i class="fa-regular fa-copy mr-3"></i></span>Copy
+            </button>
+            <button class="bg-[#00A63E] p-2 rounded-xl w-full text-white">
+              <span> <i class="fa-solid fa-phone mr-3"></i></span>Call
+            </button>
+          </div>
+        </div>
+        <div class="card-container w-full p-5 rounded-xl bg-white shadow-xl">
+          <div class="flex items-center justify-between">
+            <div
+              class="w-20 h-20 bg-red-200 flex items-center justify-center rounded-xl"
+            >
+              <img src="./assets/emergency.png" alt="" />
+            </div>
+            <i class="fa-regular fa-heart"></i>
+          </div>
+
+          <div class="mt-8">
+            <h2 class="hind-madurai-bold text-2xl">জাতীয় জরুরি সেবা</h2>
+            <p class="text-gray-400 hind-madurai-regular text-lg">
+              National emergency
+            </p>
+            <h2 class="mt-4 text-3xl hind-madurai-bold">999</h2>
+          </div>
+
+          <div class="w-25 text-center p-2 mt-4 rounded-2xl bg-gray-200">
+            <p>সার্বজনীন</p>
+          </div>
+
+          <div class="flex gap-4 mt-3">
+            <button class="border border-gray-400 p-2 rounded-xl w-full">
+              <span><i class="fa-regular fa-copy mr-3"></i></span>Copy
+            </button>
+            <button class="bg-[#00A63E] p-2 rounded-xl w-full text-white">
+              <span> <i class="fa-solid fa-phone mr-3"></i></span>Call
+            </button>
+          </div>
+        </div>
+        <div class="card-container w-full p-5 rounded-xl bg-white shadow-xl">
+          <div class="flex items-center justify-between">
+            <div
+              class="w-20 h-20 bg-red-200 flex items-center justify-center rounded-xl"
+            >
+              <img src="./assets/emergency.png" alt="" />
+            </div>
+            <i class="fa-regular fa-heart"></i>
+          </div>
+
+          <div class="mt-8">
+            <h2 class="hind-madurai-bold text-2xl">জাতীয় জরুরি সেবা</h2>
+            <p class="text-gray-400 hind-madurai-regular text-lg">
+              National emergency
+            </p>
+            <h2 class="mt-4 text-3xl hind-madurai-bold">999</h2>
+          </div>
+
+          <div class="w-25 text-center p-2 mt-4 rounded-2xl bg-gray-200">
+            <p>সার্বজনীন</p>
+          </div>
+
+          <div class="flex gap-4 mt-3">
+            <button class="border border-gray-400 p-2 rounded-xl w-full">
+              <span><i class="fa-regular fa-copy mr-3"></i></span>Copy
+            </button>
+            <button class="bg-[#00A63E] p-2 rounded-xl w-full text-white">
+              <span> <i class="fa-solid fa-phone mr-3"></i></span>Call
+            </button>
+          </div>
+        </div>
+        <div class="card-container w-full p-5 rounded-xl bg-white shadow-xl">
+          <div class="flex items-center justify-between">
+            <div
+              class="w-20 h-20 bg-red-200 flex items-center justify-center rounded-xl"
+            >
+              <img src="./assets/emergency.png" alt="" />
+            </div>
+            <i class="fa-regular fa-heart"></i>
+          </div>
+
+          <div class="mt-8">
+            <h2 class="hind-madurai-bold text-2xl">জাতীয় জরুরি সেবা</h2>
+            <p class="text-gray-400 hind-madurai-regular text-lg">
+              National emergency
+            </p>
+            <h2 class="mt-4 text-3xl hind-madurai-bold">999</h2>
+          </div>
+
+          <div class="w-25 text-center p-2 mt-4 rounded-2xl bg-gray-200">
+            <p>সার্বজনীন</p>
+          </div>
+
+          <div class="flex gap-4 mt-3">
+            <button class="border border-gray-400 p-2 rounded-xl w-full">
+              <span><i class="fa-regular fa-copy mr-3"></i></span>Copy
+            </button>
+            <button class="bg-[#00A63E] p-2 rounded-xl w-full text-white">
+              <span> <i class="fa-solid fa-phone mr-3"></i></span>Call
+            </button>
+          </div>
+        </div>
+        <div class="card-container w-full p-5 rounded-xl bg-white shadow-xl">
+          <div class="flex items-center justify-between">
+            <div
+              class="w-20 h-20 bg-red-200 flex items-center justify-center rounded-xl"
+            >
+              <img src="./assets/emergency.png" alt="" />
+            </div>
+            <i class="fa-regular fa-heart"></i>
+          </div>
+
+          <div class="mt-8">
+            <h2 class="hind-madurai-bold text-2xl">জাতীয় জরুরি সেবা</h2>
+            <p class="text-gray-400 hind-madurai-regular text-lg">
+              National emergency
+            </p>
+            <h2 class="mt-4 text-3xl hind-madurai-bold">999</h2>
+          </div>
+
+          <div class="w-25 text-center p-2 mt-4 rounded-2xl bg-gray-200">
+            <p>সার্বজনীন</p>
+          </div>
+
+          <div class="flex gap-4 mt-3">
+            <button class="border border-gray-400 p-2 rounded-xl w-full">
+              <span><i class="fa-regular fa-copy mr-3"></i></span>Copy
+            </button>
+            <button class="bg-[#00A63E] p-2 rounded-xl w-full text-white">
+              <span> <i class="fa-solid fa-phone mr-3"></i></span>Call
+            </button>
+          </div>
+        </div>
+        <div class="card-container w-full p-5 rounded-xl bg-white shadow-xl">
+          <div class="flex items-center justify-between">
+            <div
+              class="w-20 h-20 bg-red-200 flex items-center justify-center rounded-xl"
+            >
+              <img src="./assets/emergency.png" alt="" />
+            </div>
+            <i class="fa-regular fa-heart"></i>
+          </div>
+
+          <div class="mt-8">
+            <h2 class="hind-madurai-bold text-2xl">জাতীয় জরুরি সেবা</h2>
+            <p class="text-gray-400 hind-madurai-regular text-lg">
+              National emergency
+            </p>
+            <h2 class="mt-4 text-3xl hind-madurai-bold">999</h2>
+          </div>
+
+          <div class="w-25 text-center p-2 mt-4 rounded-2xl bg-gray-200">
+            <p>সার্বজনীন</p>
+          </div>
+
+          <div class="flex gap-4 mt-3">
+            <button class="border border-gray-400 p-2 rounded-xl w-full">
+              <span><i class="fa-regular fa-copy mr-3"></i></span>Copy
+            </button>
+            <button class="bg-[#00A63E] p-2 rounded-xl w-full text-white">
+              <span> <i class="fa-solid fa-phone mr-3"></i></span>Call
+            </button>
+          </div>
+        </div>
+      </div>
+      <!-- history section -->
+      <div
+        class="history-div border-2 border-green-500 h-80 w-1/2 md:w-1/3 mx-auto"
+      ></div>
     </div>
   </body>
 </html>
