card section ui complete

--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
     >
       <!-- card section -->
       <div class="card-div grid grid-cols-3 gap-6 w-full md:w-2/3">
-        <!-- emergency -->
+        <!-- Emergency -->
         <div class="card-container w-full p-5 rounded-xl bg-white shadow-xl">
           <div class="flex items-center justify-between">
             <div
-              class="w-20 h-20 bg-red-200 flex items-center justify-center rounded-xl"
+              class="w-15 h-15 bg-red-200 flex items-center justify-center rounded-xl"
             >
-              <img src="./assets/emergency.png" alt="" />
+              <img class="w-10 h-10" src="./assets/emergency.png" alt="" />
             </div>
             <i class="fa-regular fa-heart"></i>
           </div>
@@ -131,9 +131,9 @@
         <div class="card-container w-full p-5 rounded-xl bg-white shadow-xl">
           <div class="flex items-center justify-between">
             <div
-              class="w-20 h-20 bg-red-200 flex items-center justify-center rounded-xl"
+              class="w-15 h-15 bg-red-200 flex items-center justify-center rounded-xl"
             >
-              <img src="./assets/police.png" alt="" />
+              <img class="w-10 h-10" src="./assets/police.png" alt="" />
             </div>
             <i class="fa-regular fa-heart"></i>
           </div>
@@ -161,9 +161,9 @@
         <div class="card-container w-full p-5 rounded-xl bg-white shadow-xl">
           <div class="flex items-center justify-between">
             <div
-              class="w-20 h-20 bg-red-200 flex items-center justify-center rounded-xl"
+              class="w-15 h-15 bg-red-200 flex items-center justify-center rounded-xl"
             >
-              <img src="./assets/fire-service.png" alt="" />
+              <img class="w-10 h-10" src="./assets/fire-service.png" alt="" />
             </div>
             <i class="fa-regular fa-heart"></i>
           </div>
@@ -189,26 +189,25 @@
             </button>
           </div>
         </div>
+        <!-- Ambulance -->
         <div class="card-container w-full p-5 rounded-xl bg-white shadow-xl">
           <div class="flex items-center justify-between">
             <div
-              class="w-20 h-20 bg-red-200 flex items-center justify-center rounded-xl"
+              class="w-15 h-15 bg-red-200 flex items-center justify-center rounded-xl"
             >
-              <img src="./assets/emergency.png" alt="" />
+              <img class="w-10 h-10" src="./assets/ambulance.png" alt="" />
             </div>
             <i class="fa-regular fa-heart"></i>
           </div>
 
           <div class="mt-8">
-            <h2 class="hind-madurai-bold text-2xl">জাতীয় জরুরি সেবা</h2>
-            <p class="text-gray-400 hind-madurai-regular text-lg">
-              National emergency
-            </p>
-            <h2 class="mt-4 text-3xl hind-madurai-bold">999</h2>
+            <h2 class="hind-madurai-bold text-2xl">অ্যাম্বুলেন্স</h2>
+            <p class="text-gray-400 hind-madurai-regular text-lg">Ambulance</p>
+            <h2 class="mt-4 text-3xl hind-madurai-bold">1994-999999</h2>
           </div>
 
           <div class="w-25 text-center p-2 mt-4 rounded-2xl bg-gray-200">
-            <p>সার্বজনীন</p>
+            <p>স্বাস্থ্য</p>
           </div>
 
           <div class="flex gap-4 mt-3">
@@ -220,26 +219,27 @@
             </button>
           </div>
         </div>
+        <!-- Women and Child Helpline -->
         <div class="card-container w-full p-5 rounded-xl bg-white shadow-xl">
           <div class="flex items-center justify-between">
             <div
-              class="w-20 h-20 bg-red-200 flex items-center justify-center rounded-xl"
+              class="w-15 h-15 bg-red-200 flex items-center justify-center rounded-xl"
             >
-              <img src="./assets/emergency.png" alt="" />
+              <img class="w-10 h-10" src="./assets/emergency.png" alt="" />
             </div>
             <i class="fa-regular fa-heart"></i>
           </div>
 
           <div class="mt-8">
-            <h2 class="hind-madurai-bold text-2xl">জাতীয় জরুরি সেবা</h2>
+            <h2 class="hind-madurai-bold text-2xl">নারী ও শিশু সহায়তা</h2>
             <p class="text-gray-400 hind-madurai-regular text-lg">
-              National emergency
+              Women & Child Helpline
             </p>
-            <h2 class="mt-4 text-3xl hind-madurai-bold">999</h2>
+            <h2 class="mt-4 text-3xl hind-madurai-bold">109</h2>
           </div>
 
           <div class="w-25 text-center p-2 mt-4 rounded-2xl bg-gray-200">
-            <p>সার্বজনীন</p>
+            <p>সহায়তা</p>
           </div>
 
           <div class="flex gap-4 mt-3">
@@ -251,26 +251,27 @@
             </button>
           </div>
         </div>
+        <!-- Anti-Corruption -->
         <div class="card-container w-full p-5 rounded-xl bg-white shadow-xl">
           <div class="flex items-center justify-between">
             <div
-              class="w-20 h-20 bg-red-200 flex items-center justify-center rounded-xl"
+              class="w-15 h-15 bg-red-200 flex items-center justify-center rounded-xl"
             >
-              <img src="./assets/emergency.png" alt="" />
+              <img class="w-10 h-10" src="./assets/emergency.png" alt="" />
             </div>
             <i class="fa-regular fa-heart"></i>
           </div>
 
           <div class="mt-8">
-            <h2 class="hind-madurai-bold text-2xl">জাতীয় জরুরি সেবা</h2>
+            <h2 class="hind-madurai-bold text-2xl">দুদক</h2>
             <p class="text-gray-400 hind-madurai-regular text-lg">
-              National emergency
+              Anti-Corruption
             </p>
-            <h2 class="mt-4 text-3xl hind-madurai-bold">999</h2>
+            <h2 class="mt-4 text-3xl hind-madurai-bold">106</h2>
           </div>
 
           <div class="w-25 text-center p-2 mt-4 rounded-2xl bg-gray-200">
-            <p>সার্বজনীন</p>
+            <p>সারকারি</p>
           </div>
 
           <div class="flex gap-4 mt-3">
@@ -282,26 +283,27 @@
             </button>
           </div>
         </div>
+        <!-- Electricity Outage -->
         <div class="card-container w-full p-5 rounded-xl bg-white shadow-xl">
           <div class="flex items-center justify-between">
             <div
-              class="w-20 h-20 bg-red-200 flex items-center justify-center rounded-xl"
+              class="w-15 h-15 bg-red-200 flex items-center justify-center rounded-xl"
             >
-              <img src="./assets/emergency.png" alt="" />
+              <img class="w-10 h-10" src="./assets/emergency.png" alt="" />
             </div>
             <i class="fa-regular fa-heart"></i>
           </div>
 
           <div class="mt-8">
-            <h2 class="hind-madurai-bold text-2xl">জাতীয় জরুরি সেবা</h2>
+            <h2 class="hind-madurai-bold text-2xl">বিদ্যুৎ বিভ্রাট</h2>
             <p class="text-gray-400 hind-madurai-regular text-lg">
-              National emergency
+              Electricity Outage
             </p>
-            <h2 class="mt-4 text-3xl hind-madurai-bold">999</h2>
+            <h2 class="mt-4 text-3xl hind-madurai-bold">16216</h2>
           </div>
 
           <div class="w-25 text-center p-2 mt-4 rounded-2xl bg-gray-200">
-            <p>সার্বজনীন</p>
+            <p>বিদ্যুৎ</p>
           </div>
 
           <div class="flex gap-4 mt-3">
@@ -313,26 +315,25 @@
             </button>
           </div>
         </div>
+        <!-- Brac -->
         <div class="card-container w-full p-5 rounded-xl bg-white shadow-xl">
           <div class="flex items-center justify-between">
             <div
-              class="w-20 h-20 bg-red-200 flex items-center justify-center rounded-xl"
+              class="w-15 h-15 bg-red-200 flex items-center justify-center rounded-xl"
             >
-              <img src="./assets/emergency.png" alt="" />
+              <img class="w-10 h-10" src="./assets/brac.png" alt="" />
             </div>
             <i class="fa-regular fa-heart"></i>
           </div>
 
           <div class="mt-8">
-            <h2 class="hind-madurai-bold text-2xl">জাতীয় জরুরি সেবা</h2>
-            <p class="text-gray-400 hind-madurai-regular text-lg">
-              National emergency
-            </p>
-            <h2 class="mt-4 text-3xl hind-madurai-bold">999</h2>
+            <h2 class="hind-madurai-bold text-2xl">ব্রাক</h2>
+            <p class="text-gray-400 hind-madurai-regular text-lg">Brac</p>
+            <h2 class="mt-4 text-3xl hind-madurai-bold">16445</h2>
           </div>
 
           <div class="w-25 text-center p-2 mt-4 rounded-2xl bg-gray-200">
-            <p>সার্বজনীন</p>
+            <p>এনজিও</p>
           </div>
 
           <div class="flex gap-4 mt-3">
@@ -344,26 +345,31 @@
             </button>
           </div>
         </div>
+        <!-- Bangladesh Railway -->
         <div class="card-container w-full p-5 rounded-xl bg-white shadow-xl">
           <div class="flex items-center justify-between">
             <div
-              class="w-20 h-20 bg-red-200 flex items-center justify-center rounded-xl"
+              class="w-15 h-15 bg-red-200 flex items-center justify-center rounded-xl"
             >
-              <img src="./assets/emergency.png" alt="" />
+              <img
+                class="w-10 h-10"
+                src="./assets/Bangladesh-Railway.png"
+                alt=""
+              />
             </div>
             <i class="fa-regular fa-heart"></i>
           </div>
 
           <div class="mt-8">
-            <h2 class="hind-madurai-bold text-2xl">জাতীয় জরুরি সেবা</h2>
+            <h2 class="hind-madurai-bold text-2xl">বাংলাদেশ রেলওয়ে</h2>
             <p class="text-gray-400 hind-madurai-regular text-lg">
-              National emergency
+              Bangladesh Railway
             </p>
-            <h2 class="mt-4 text-3xl hind-madurai-bold">999</h2>
+            <h2 class="mt-4 text-3xl hind-madurai-bold">163</h2>
           </div>
 
           <div class="w-25 text-center p-2 mt-4 rounded-2xl bg-gray-200">
-            <p>সার্বজনীন</p>
+            <p>পরিবহন</p>
           </div>
 
           <div class="flex gap-4 mt-3">
