card seciton responsive

--- a/index.html
+++ b/index.html
@@ -94,7 +94,9 @@
       class="main-div max-w-full md:max-w-[1450px] m-5 md:mx-auto mt-5 flex flex-col md:flex-row p-5 gap-5"
     >
       <!-- card section -->
-      <div class="card-div grid grid-cols-3 gap-6 w-full md:w-2/3">
+      <div
+        class="card-div grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-3 gap-6 w-full md:w-2/3"
+      >
         <!-- Emergency -->
         <div class="card-container w-full p-5 rounded-xl bg-white shadow-xl">
           <div class="flex items-center justify-between">
