--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
         <div
           class="love-div flex items-center justify-center gap-2 w-25 h-10 rounded-full bg-[#bcfdc965]"
         >
-          <span>0</span>
+          <span id="heart-text">0</span>
           <img class="w-5 h-5" src="./assets/heart.png" alt="" />
         </div>
 
         <div
           class="coin-div flex items-center justify-center gap-2 w-25 h-10 rounded-full bg-[#bcfdc965]"
         >
-          <span>100</span>
+          <span id="coin-text">100</span>
           <img class="w-5 h-5" src="./assets/coin.png" alt="" />
         </div>
 
@@ -105,7 +105,7 @@
             >
               <img class="w-10 h-10" src="./assets/emergency.png" alt="" />
             </div>
-            <i class="fa-regular fa-heart"></i>
+            <i class="heart-icon fa-regular fa-heart"></i>
           </div>
 
           <div class="mt-8">
@@ -124,7 +124,11 @@
             <button class="border border-gray-400 p-2 rounded-xl w-full">
               <span><i class="fa-regular fa-copy mr-3"></i></span>Copy
             </button>
-            <button class="bg-[#00A63E] p-2 rounded-xl w-full text-white">
+            <button
+              data-name="জাতীয় জরুরি সেবা"
+              data-number="999"
+              class="allcall bg-[#00A63E] p-2 rounded-xl w-full text-white"
+            >
               <span> <i class="fa-solid fa-phone mr-3"></i></span>Call
             </button>
           </div>
@@ -137,7 +141,7 @@
             >
               <img class="w-10 h-10" src="./assets/police.png" alt="" />
             </div>
-            <i class="fa-regular fa-heart"></i>
+            <i class="heart-icon fa-regular fa-heart"></i>
           </div>
 
           <div class="mt-8">
@@ -154,7 +158,11 @@
             <button class="border border-gray-400 p-2 rounded-xl w-full">
               <span><i class="fa-regular fa-copy mr-3"></i></span>Copy
             </button>
-            <button class="bg-[#00A63E] p-2 rounded-xl w-full text-white">
+            <button
+              class="allcall bg-[#00A63E] p-2 rounded-xl w-full text-white"
+              data-name="পুলিশ"
+              data-number="999"
+            >
               <span> <i class="fa-solid fa-phone mr-3"></i></span>Call
             </button>
           </div>
@@ -167,7 +175,7 @@
             >
               <img class="w-10 h-10" src="./assets/fire-service.png" alt="" />
             </div>
-            <i class="fa-regular fa-heart"></i>
+            <i class="heart-icon fa-regular fa-heart"></i>
           </div>
 
           <div class="mt-8">
@@ -186,7 +194,11 @@
             <button class="border border-gray-400 p-2 rounded-xl w-full">
               <span><i class="fa-regular fa-copy mr-3"></i></span>Copy
             </button>
-            <button class="bg-[#00A63E] p-2 rounded-xl w-full text-white">
+            <button
+              class="allcall bg-[#00A63E] p-2 rounded-xl w-full text-white"
+              data-name="ফায়ার সার্ভিস"
+              data-number="999"
+            >
               <span> <i class="fa-solid fa-phone mr-3"></i></span>Call
             </button>
           </div>
@@ -199,7 +211,7 @@
             >
               <img class="w-10 h-10" src="./assets/ambulance.png" alt="" />
             </div>
-            <i class="fa-regular fa-heart"></i>
+            <i class="heart-icon fa-regular fa-heart"></i>
           </div>
 
           <div class="mt-8">
@@ -216,7 +228,11 @@
             <button class="border border-gray-400 p-2 rounded-xl w-full">
               <span><i class="fa-regular fa-copy mr-3"></i></span>Copy
             </button>
-            <button class="bg-[#00A63E] p-2 rounded-xl w-full text-white">
+            <button
+              class="allcall bg-[#00A63E] p-2 rounded-xl w-full text-white"
+              data-name="অ্যাম্বুলেন্স"
+              data-number="1994-999999"
+            >
               <span> <i class="fa-solid fa-phone mr-3"></i></span>Call
             </button>
           </div>
@@ -229,7 +245,7 @@
             >
               <img class="w-10 h-10" src="./assets/emergency.png" alt="" />
             </div>
-            <i class="fa-regular fa-heart"></i>
+            <i class="heart-icon fa-regular fa-heart"></i>
           </div>
 
           <div class="mt-8">
@@ -248,7 +264,11 @@
             <button class="border border-gray-400 p-2 rounded-xl w-full">
               <span><i class="fa-regular fa-copy mr-3"></i></span>Copy
             </button>
-            <button class="bg-[#00A63E] p-2 rounded-xl w-full text-white">
+            <button
+              class="allcall bg-[#00A63E] p-2 rounded-xl w-full text-white"
+              data-name="নারী ও শিশু সহায়তা"
+              data-number="109"
+            >
               <span> <i class="fa-solid fa-phone mr-3"></i></span>Call
             </button>
           </div>
@@ -261,7 +281,7 @@
             >
               <img class="w-10 h-10" src="./assets/emergency.png" alt="" />
             </div>
-            <i class="fa-regular fa-heart"></i>
+            <i class="heart-icon fa-regular fa-heart"></i>
           </div>
 
           <div class="mt-8">
@@ -280,7 +300,11 @@
             <button class="border border-gray-400 p-2 rounded-xl w-full">
               <span><i class="fa-regular fa-copy mr-3"></i></span>Copy
             </button>
-            <button class="bg-[#00A63E] p-2 rounded-xl w-full text-white">
+            <button
+              class="allcall bg-[#00A63E] p-2 rounded-xl w-full text-white"
+              data-name="দুদক"
+              data-number="106"
+            >
               <span> <i class="fa-solid fa-phone mr-3"></i></span>Call
             </button>
           </div>
@@ -293,7 +317,7 @@
             >
               <img class="w-10 h-10" src="./assets/emergency.png" alt="" />
             </div>
-            <i class="fa-regular fa-heart"></i>
+            <i class="heart-icon fa-regular fa-heart"></i>
           </div>
 
           <div class="mt-8">
@@ -312,7 +336,11 @@
             <button class="border border-gray-400 p-2 rounded-xl w-full">
               <span><i class="fa-regular fa-copy mr-3"></i></span>Copy
             </button>
-            <button class="bg-[#00A63E] p-2 rounded-xl w-full text-white">
+            <button
+              class="allcall bg-[#00A63E] p-2 rounded-xl w-full text-white"
+              data-name="বিদ্যুৎ বিভ্রাট"
+              data-number="16216"
+            >
               <span> <i class="fa-solid fa-phone mr-3"></i></span>Call
             </button>
           </div>
@@ -325,7 +353,7 @@
             >
               <img class="w-10 h-10" src="./assets/brac.png" alt="" />
             </div>
-            <i class="fa-regular fa-heart"></i>
+            <i class="heart-icon fa-regular fa-heart"></i>
           </div>
 
           <div class="mt-8">
@@ -342,7 +370,11 @@
             <button class="border border-gray-400 p-2 rounded-xl w-full">
               <span><i class="fa-regular fa-copy mr-3"></i></span>Copy
             </button>
-            <button class="bg-[#00A63E] p-2 rounded-xl w-full text-white">
+            <button
+              class="allcall bg-[#00A63E] p-2 rounded-xl w-full text-white"
+              data-name="ব্রাক"
+              data-number="16445"
+            >
               <span> <i class="fa-solid fa-phone mr-3"></i></span>Call
             </button>
           </div>
@@ -359,7 +391,7 @@
                 alt=""
               />
             </div>
-            <i class="fa-regular fa-heart"></i>
+            <i class="heart-icon fa-regular fa-heart"></i>
           </div>
 
           <div class="mt-8">
@@ -378,7 +410,11 @@
             <button class="border border-gray-400 p-2 rounded-xl w-full">
               <span><i class="fa-regular fa-copy mr-3"></i></span>Copy
             </button>
-            <button class="bg-[#00A63E] p-2 rounded-xl w-full text-white">
+            <button
+              class="allcall bg-[#00A63E] p-2 rounded-xl w-full text-white"
+              data-name="বাংলাদেশ রেলওয়ে"
+              data-number="163"
+            >
               <span> <i class="fa-solid fa-phone mr-3"></i></span>Call
             </button>
           </div>
@@ -386,8 +422,24 @@
       </div>
       <!-- history section -->
       <div
-        class="history-div border-2 border-green-500 h-80 w-1/2 md:w-1/3 mx-auto"
-      ></div>
+        class="history-div rounded-2xl bg-white w-full md:w-1/3 mx-auto"
+      >
+        <!-- history header -->
+        <div class="flex items-center justify-between p-5">
+          <div class="flex items-center gap-2">
+            <i class="fa-solid fa-clock"></i>
+            <p>Call History</p>
+          </div>
+          <div class="w-20">
+            <button id="clear-history" class="bg-[#00A63E] p-2 rounded-xl w-full text-white">
+              Clear
+            </button>
+          </div>
+        </div>
+        <div id="call-history" class="p-5 space-y-2"></div>
+      </div>
     </div>
+
+    <script src="./js/emergency.js"></script>
   </body>
 </html>
