--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div
           class="coin-div flex items-center justify-center gap-2 w-25 h-10 text-white rounded-full bg-[#00A63E]"
         >
-          <span>2 Copy</span>
+          <p><span class="copy-text">2</span> Copy</p>
         </div>
       </div>
     </nav>
@@ -421,9 +421,7 @@
         </div>
       </div>
       <!-- history section -->
-      <div
-        class="history-div rounded-2xl bg-white w-full md:w-1/3 mx-auto"
-      >
+      <div class="history-div rounded-2xl bg-white w-full md:w-1/3 mx-auto">
         <!-- history header -->
         <div class="flex items-center justify-between p-5">
           <div class="flex items-center gap-2">
@@ -431,7 +429,10 @@
             <p>Call History</p>
           </div>
           <div class="w-20">
-            <button id="clear-history" class="bg-[#00A63E] p-2 rounded-xl w-full text-white">
+            <button
+              id="clear-history"
+              class="bg-[#00A63E] p-2 rounded-xl w-full text-white"
+            >
               Clear
             </button>
           </div>
